Change vendor name in composer.json Third update

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gs-developer-omar/core",
+    "name": "gs_developer_omar/core",
     "authors": [
         {
             "name": "gsDeveloperOmar",
